--- a/src/assets/styles/components/Home.scss
+++ b/src/assets/styles/components/Home.scss
@@ -1,6 +1,7 @@
 .home-container {
   width: 100%;
   height: 100vh;
+  transition: 0.2s ease-in-out;
 
   .header {
     width: 70%;
@@ -9,10 +10,12 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    transition: 0.2s ease-in-out;
 
     .loggedin {
       display: flex;
       align-items: flex-end;
+      transition: 0.2s ease-in-out;
 
       p {
         margin-right: 15px;
@@ -35,11 +38,13 @@
         align-items: center;
         justify-content: center;
         box-shadow: 3px 3px 8px black;
+        transition: 0.2s ease-in-out;
 
         img {
           width: 70px;
           height: 70px;
           border-radius: 50%;
+          transition: 0.2s ease-in-out;
         }
       }
     }
@@ -62,13 +67,80 @@
         box-shadow: 1px 1px 8px #06bddd71;
       }
     }
+
+    @media (min-width: 1920px) {
+      h1 {
+        font-size: 3rem;
+      }
+
+      .loggedin {
+        p {
+          font-size: 1.5rem;
+        }
+
+        .profile_pic {
+          border: 2px solid $light;
+          width: 100px;
+          height: 100px;
+          box-shadow: 6px 6px 16px rgba(0, 0, 0, 0.392);
+
+          img {
+            width: 95px;
+            height: 95px;
+          }
+        }
+      }
+
+      .loggedout {
+        border: 2px solid $light;
+        width: 100px;
+        height: 100px;
+        font-size: 1.5rem;
+      }
+    }
+
+    @media (max-width: 800px) {
+      width: 100%;
+      min-width: 250px;
+    }
+
+    @media (max-width: 350px) {
+      .loggedin {
+        display: flex;
+        flex-direction: column-reverse;
+        align-items: center;
+
+        p {
+          margin-right: 0;
+          margin-top: 5px;
+        }
+        .profile_pic {
+          width: 60px;
+          height: 60px;
+
+          img {
+            width: 55px;
+            height: 55px;
+            border-radius: 50%;
+          }
+        }
+      }
+
+      .loggedout {
+        border: 1px solid $light;
+        width: 60px;
+        height: 60px;
+        font-size: 0.8rem;
+      }
+    }
   }
 
   .wrapper {
-    width: 90%;
-    height: 80vh;
+    width: 95%;
+    min-height: 100vh;
     margin: auto;
     position: relative;
+    transition: 0.2s ease-in-out;
 
     .col_1 {
       width: 60%;
@@ -77,6 +149,7 @@
       top: 50%;
       transform: translateY(-50%);
       left: 5%;
+      transition: 0.2s ease-in-out;
 
       .hero {
         background-color: #0964741a;
@@ -91,6 +164,7 @@
         display: flex;
         flex-direction: column;
         justify-content: space-around;
+        transition: 0.2s ease-in-out;
 
         h1 {
           text-align: center;
@@ -98,6 +172,11 @@
           text-shadow: 2px 2px 2px black;
           letter-spacing: 2px;
           font-size: 3rem;
+          transition: 0.2s ease-in-out;
+        }
+
+        .image {
+          display: none;
         }
 
         p {
@@ -105,6 +184,7 @@
           color: rgba(255, 255, 255, 0.452);
           line-height: 30px;
           text-align: center;
+          transition: 0.2s ease-in-out;
         }
 
         button {
@@ -127,6 +207,12 @@
             background-color: $success-hover;
             color: $light;
           }
+
+          &:focus {
+            box-shadow: 1px 1px 10px $success-hover;
+            background-color: $success-hover;
+            color: $light;
+          }
         }
       }
     }
@@ -136,16 +222,103 @@
       top: 50%;
       transform: translateY(-50%);
       right: 0;
+      transition: 0.2s ease-in-out;
 
       .image {
         position: relative;
         width: 600px;
         height: 400px;
+        transition: 0.2s ease-in-out;
 
         img {
           width: 100%;
           height: 100%;
+          transition: 0.2s ease-in-out;
         }
+      }
+    }
+
+    @media (min-width: 1920px) {
+      width: 95%;
+      min-height: 100vh;
+
+      .col_1 {
+        left: 0;
+
+        .hero {
+          background-color: #0964741a;
+          backdrop-filter: blur(22px);
+          width: 1000px;
+          height: 80vh;
+          padding: 20px;
+          border-top: 10px solid $primary;
+          border-bottom: 10px solid $primary;
+          border-radius: 30px;
+          box-shadow: 6px 6px 16px rgba(0, 0, 0, 0.305);
+
+          h1 {
+            font-size: 4rem;
+          }
+
+          p {
+            font-size: 1.5rem;
+          }
+
+          button {
+            font-size: 2.5rem;
+          }
+        }
+      }
+
+      .col_2 {
+        .image {
+          width: 800px;
+          height: 600px;
+        }
+      }
+    }
+
+    @media (max-width: 1000px) {
+      width: 100%;
+      height: 100%;
+
+      .col_1 {
+        width: 100%;
+        min-width: 250px;
+        position: initial;
+        z-index: 1;
+        top: unset;
+        transform: none;
+        left: unset;
+
+        .hero {
+          background-color: transparent;
+          width: 100%;
+          height: auto;
+          border: unset;
+          box-shadow: none;
+          align-items: center;
+
+          h1 {
+            @media (max-width: 500px) {
+              font-size: 1.9rem;
+            }
+          }
+
+          .image {
+            display: block;
+            width: 100%;
+            text-align: center;
+
+            img {
+              width: 80%;
+            }
+          }
+        }
+      }
+
+      .col_2 {
+        display: none;
       }
     }
   }
