--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -8,7 +8,7 @@
   "./components/UpdateGroupName", "./components/DeleteModal",
   "./components/CreateGroupName", "./components/SearchGroup",
   "./components/GroupMembers", "./components/GroupPanel",
-  "./components/GroupProfile";
+  "./components/GroupProfile", "./components/Spinner";
 
 * {
   padding: 0;
