--- a/src/assets/styles/components/AddGroupFriends.scss
+++ b/src/assets/styles/components/AddGroupFriends.scss
@@ -16,6 +16,7 @@
     transform: translate(-50%, -50%);
     height: 70vh;
     border-radius: 20px;
+    border-bottom-right-radius: unset;
     box-shadow: 3px 4px 22px rgb(41, 41, 41);
 
     .header {
@@ -94,14 +95,22 @@
         justify-content: space-between;
         margin-top: 20px;
 
-        .col-one {
+        .fr-col-one {
           display: flex;
           align-items: center;
 
-          img {
+          .image {
             width: 50px;
+            height: 50px;
             border-radius: 50%;
             box-shadow: 0 0 5px black;
+          }
+
+          img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            border-radius: 50%;
           }
 
           #name {
@@ -109,7 +118,7 @@
           }
         }
 
-        .col-two {
+        .fr-col-two {
           #add {
             width: 100px;
             border: none;
