--- a/src/assets/styles/components/Friends.scss
+++ b/src/assets/styles/components/Friends.scss
@@ -17,30 +17,8 @@
   .friends-wrapper {
     margin-top: 40px;
     border-top: 1px solid $light;
-    height: 67vh;
     position: relative;
-
-    /* width */
-    &::-webkit-scrollbar {
-      width: 5px;
-    }
-
-    /* Track */
-    &::-webkit-scrollbar-track {
-      box-shadow: inset 0 0 5px grey;
-      border-radius: 10px;
-    }
-
-    /* Handle */
-    &::-webkit-scrollbar-thumb {
-      background: $success;
-      border-radius: 10px;
-    }
-
-    /* Handle on hover */
-    &::-webkit-scrollbar-thumb:hover {
-      background: $success-hover;
-    }
+    min-height: 60vh;
 
     #no-friends {
       position: absolute;
