--- a/src/assets/styles/components/GroupRequests.scss
+++ b/src/assets/styles/components/GroupRequests.scss
@@ -16,6 +16,7 @@
     transform: translate(-50%, -50%);
     height: 70vh;
     border-radius: 20px;
+    border-bottom-right-radius: unset;
     box-shadow: 3px 4px 22px rgb(41, 41, 41);
 
     .header {
@@ -97,22 +98,32 @@
         justify-content: space-between;
         margin-top: 20px;
 
-        .col-one {
+        .req-col-one {
           display: flex;
           align-items: center;
 
-          img {
+          .image {
             width: 50px;
+            height: 50px;
             border-radius: 50%;
             box-shadow: 0 0 5px black;
           }
 
+          img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            border-radius: 50%;
+          }
+
           #name {
             margin-left: 10px;
+            width: 100px;
+            word-wrap: break-word;
           }
         }
 
-        .col-two {
+        .req-col-two {
           #accept {
             width: 70px;
             border: none;
