--- a/src/assets/styles/components/Groups.scss
+++ b/src/assets/styles/components/Groups.scss
@@ -22,31 +22,9 @@
         width: 90%;
         margin: 0 auto;
         margin-top: 30px;
-        height: 53vh;
         padding: 0 30px;
+        min-height: 50vh;
         position: relative;
-
-        /* width */
-        &::-webkit-scrollbar {
-          width: 5px;
-        }
-
-        /* Track */
-        &::-webkit-scrollbar-track {
-          box-shadow: inset 0 0 5px grey;
-          border-radius: 10px;
-        }
-
-        /* Handle */
-        &::-webkit-scrollbar-thumb {
-          background: $success;
-          border-radius: 10px;
-        }
-
-        /* Handle on hover */
-        &::-webkit-scrollbar-thumb:hover {
-          background: $success-hover;
-        }
 
         #no-groups {
           position: absolute;
