--- a/src/assets/styles/components/Home.scss
+++ b/src/assets/styles/components/Home.scss
@@ -43,6 +43,7 @@
         img {
           width: 70px;
           height: 70px;
+          object-fit: cover;
           border-radius: 50%;
           transition: 0.2s ease-in-out;
         }
