--- a/src/assets/styles/components/Profile.scss
+++ b/src/assets/styles/components/Profile.scss
@@ -130,30 +130,8 @@
 
       .request-wrapper {
         margin-top: 10px;
-        height: 47vh;
         position: relative;
-
-        /* width */
-        &::-webkit-scrollbar {
-          width: 5px;
-        }
-
-        /* Track */
-        &::-webkit-scrollbar-track {
-          box-shadow: inset 0 0 5px grey;
-          border-radius: 10px;
-        }
-
-        /* Handle */
-        &::-webkit-scrollbar-thumb {
-          background: $success;
-          border-radius: 10px;
-        }
-
-        /* Handle on hover */
-        &::-webkit-scrollbar-thumb:hover {
-          background: $success-hover;
-        }
+        min-height: 60vh;
 
         #no-reqs {
           position: absolute;
