--- a/src/assets/styles/components/Auth.scss
+++ b/src/assets/styles/components/Auth.scss
@@ -137,6 +137,12 @@
         }
       }
 
+      #login-error {
+        color: $danger;
+        margin: 10px 0;
+        font-weight: 700;
+      }
+
       form {
         display: flex;
         flex-direction: column;
