--- a/src/assets/styles/components/Group.scss
+++ b/src/assets/styles/components/Group.scss
@@ -7,6 +7,36 @@
   height: 100vh;
   backdrop-filter: blur(18px);
 
+  .chat-btn {
+    padding: 10px;
+    display: flex;
+    justify-content: flex-end;
+
+    #btn {
+      width: 120px;
+      border: none;
+      outline: none;
+      padding: 7px;
+      font-family: inherit;
+      font-size: 1rem;
+      border-radius: 10px;
+      background-color: rgb(34, 34, 34);
+      color: $light-trans;
+      transition: all 0.2s ease-in-out;
+      cursor: pointer;
+
+      &:hover {
+        color: $light;
+        background-color: black;
+      }
+
+      &:active {
+        transform: scale(0.95);
+        color: $light-trans;
+      }
+    }
+  }
+
   .section-two {
     display: flex;
   }
