--- a/src/assets/styles/components/AddGroupFriends.scss
+++ b/src/assets/styles/components/AddGroupFriends.scss
@@ -5,19 +5,21 @@
   left: 0;
   width: 100%;
   height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  animation: fade 200ms ease-in;
 
   .add-group-friends-container {
     background-color: $light-trans;
     backdrop-filter: blur(22px);
     width: 60%;
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
+    min-width: 250px;
     height: 70vh;
     border-radius: 20px;
     border-bottom-right-radius: unset;
     box-shadow: 3px 4px 22px rgb(41, 41, 41);
+    animation: grow 200ms linear;
 
     .header {
       background-color: rgb(205, 231, 231);
@@ -151,6 +153,28 @@
               background-color: rgb(97, 97, 97);
               box-shadow: 0 0 3px rgb(39, 39, 39);
               text-shadow: none;
+            }
+          }
+        }
+      }
+
+      @media (max-width: 600px) {
+        .friend {
+          box-shadow: 0 0 3px rgba(0, 0, 0, 0.123);
+          padding: 10px;
+          flex-direction: column;
+          margin-top: 20px;
+
+          .fr-col-one {
+            width: 250px;
+            justify-content: space-around;
+          }
+
+          .fr-col-two {
+            margin-top: 20px;
+
+            #add {
+              width: 200px;
             }
           }
         }
