--- a/src/assets/styles/components/Auth.scss
+++ b/src/assets/styles/components/Auth.scss
@@ -12,6 +12,10 @@
     position: absolute;
     z-index: 10;
     transition: 0.2s ease-in-out;
+
+    img {
+      width: 70px;
+    }
   }
 
   .image {
@@ -71,6 +75,21 @@
     transform: translateY(-50%);
     min-height: 70vh;
     transition: 0.2s ease-in-out;
+
+    .spinner-container {
+      background-color: rgba(0, 0, 0, 0.612);
+      width: 100%;
+      height: 100%;
+      border-radius: 20px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      animation: fade 200ms ease-in;
+
+      @media (max-width: 1200px) {
+        border-radius: unset;
+      }
+    }
 
     .oauth {
       display: flex;
@@ -293,6 +312,9 @@
       left: 0;
       top: 50%;
       height: 100%;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
 
       .oauth {
         margin-top: 60px;
@@ -303,7 +325,7 @@
         margin-top: 30px;
         color: rgba(0, 0, 0, 0.626);
 
-        @media (max-width: 445px) {
+        @media (max-width: 800px) {
           color: $light;
         }
       }
@@ -316,7 +338,7 @@
             color: rgba(0, 0, 0, 0.912);
           }
 
-          @media (max-width: 550px) {
+          @media (max-width: 850px) {
             color: rgb(209, 209, 209);
 
             span {
