--- a/src/assets/styles/components/ChatWindow.scss
+++ b/src/assets/styles/components/ChatWindow.scss
@@ -26,27 +26,39 @@
     height: 90vh;
     position: relative;
 
-    .close-chat {
+    .chat-header {
+      background-color: rgb(152, 176, 197);
+      box-shadow: 0 12px 15px -4px rgba(0, 0, 0, 0.158);
+      width: 100%;
+      height: 50px;
       position: absolute;
-      background-color: rgba(0, 0, 0, 0.5);
-      margin: 5px;
-      padding: 3px 5px;
       display: flex;
-      justify-content: center;
+      justify-content: flex-end;
       align-items: center;
-      border-radius: 7px;
-      color: rgb(179, 179, 179);
-      font-size: 0.8rem;
-      cursor: pointer;
-      transition: 0.2s ease-in-out;
       z-index: 1;
 
-      #close-icon {
-        font-size: 1.2rem;
-      }
+      .close-chat {
+        width: 100px;
+        background-color: rgba(0, 0, 0, 0.082);
+        margin: 5px;
+        height: 30px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border-radius: 7px;
+        color: rgb(43, 41, 41);
+        font-size: 0.8rem;
+        cursor: pointer;
+        transition: 0.2s ease-in-out;
 
-      &:hover {
-        color: white;
+        #close-icon {
+          font-size: 1.2rem;
+        }
+
+        &:hover {
+          color: white;
+          background-color: black;
+        }
       }
     }
 
@@ -55,6 +67,7 @@
       height: 90vh;
 
       .msg-wrapper {
+        margin-top: 50px;
         padding: 20px;
         display: flex;
         flex-direction: column;
@@ -147,7 +160,7 @@
       }
 
       .emoji-btn {
-        width: 70px;
+        width: 90px;
         height: 100%;
         display: flex;
         align-items: center;
@@ -164,7 +177,7 @@
       }
 
       .send-btn {
-        width: 70px;
+        width: 90px;
         height: 100%;
         display: flex;
         align-items: center;
@@ -186,7 +199,16 @@
     .emoji-window {
       position: absolute;
       bottom: 100%;
-      right: 15%;
+      right: 10%;
+
+      @media (max-width: 400px) {
+        width: 100%;
+        right: 0;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+      }
     }
   }
 
