--- a/src/assets/styles/components/Group.scss
+++ b/src/assets/styles/components/Group.scss
@@ -4,13 +4,38 @@
   top: 0;
   left: 0;
   width: 100%;
-  height: 100vh;
   backdrop-filter: blur(18px);
+  height: 100vh;
+  overflow-y: scroll;
+  animation: slideDown 0.1s ease-in;
+
+  /* width */
+  &::-webkit-scrollbar {
+    width: 5px;
+  }
+
+  /* Track */
+  &::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px rgb(19, 19, 19);
+    border-radius: 10px;
+  }
+
+  /* Handle */
+  &::-webkit-scrollbar-thumb {
+    background: $secondary;
+    border-radius: 10px;
+  }
+
+  /* Handle on hover */
+  &::-webkit-scrollbar-thumb:hover {
+    background: $secondary-hover;
+  }
 
   .chat-btn {
     padding: 10px;
-    display: flex;
-    justify-content: flex-end;
+    width: 150px;
+    position: absolute;
+    right: 0;
 
     #btn {
       width: 120px;
@@ -39,5 +64,6 @@
 
   .section-two {
     display: flex;
+    margin-top: 50px;
   }
 }
