--- a/src/assets/styles/components/GroupMembers.scss
+++ b/src/assets/styles/components/GroupMembers.scss
@@ -4,29 +4,6 @@
   .members-wrapper {
     margin-top: 10px;
     padding: 10px;
-    height: 53vh;
-
-    /* width */
-    &::-webkit-scrollbar {
-      width: 5px;
-    }
-
-    /* Track */
-    &::-webkit-scrollbar-track {
-      box-shadow: inset 0 0 5px rgb(19, 19, 19);
-      border-radius: 10px;
-    }
-
-    /* Handle */
-    &::-webkit-scrollbar-thumb {
-      background: $secondary;
-      border-radius: 10px;
-    }
-
-    /* Handle on hover */
-    &::-webkit-scrollbar-thumb:hover {
-      background: $secondary-hover;
-    }
 
     #member-count {
       position: relative;
@@ -146,6 +123,39 @@
             background-color: $danger-hover;
             color: $light;
             box-shadow: 0 0 5px $danger-hover;
+          }
+        }
+      }
+
+      @media (max-width: 400px) {
+        .member {
+          flex-direction: column;
+          box-shadow: 0 0 3px rgba(0, 0, 0, 0.11);
+          border-radius: 5px;
+          padding: 10px;
+          min-width: 200px;
+
+          .avatar {
+            width: 200px;
+            justify-content: space-around;
+          }
+
+          #leave-btn {
+            height: 25px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            width: 200px;
+            margin-top: 20px;
+          }
+
+          #remove-btn {
+            height: 25px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            width: 200px;
+            margin-top: 20px;
           }
         }
       }
