--- a/src/assets/styles/components/GroupProfile.scss
+++ b/src/assets/styles/components/GroupProfile.scss
@@ -221,4 +221,93 @@
       }
     }
   }
+
+  @media (max-width: 600px) {
+    flex-direction: column;
+    align-items: center;
+
+    .image-wrapper {
+      width: 100%;
+    }
+
+    section {
+      width: 100%;
+
+      .info {
+        margin-top: 20px;
+        align-items: center;
+      }
+
+      .activity {
+        margin-top: 20px;
+        width: 100%;
+      }
+    }
+  }
+
+  @media (max-width: 400px) {
+    .image-wrapper {
+      margin-top: 50px;
+
+      .image {
+        width: 100px;
+        height: 100px;
+      }
+    }
+
+    section {
+      .info {
+        margin-top: 5px;
+
+        #name {
+          h3 {
+            font-size: 0.9rem;
+          }
+        }
+
+        #date {
+          font-size: 0.8rem;
+          margin-top: 5px;
+        }
+      }
+
+      .activity {
+        flex-direction: column;
+
+        .requests {
+          justify-content: center;
+          width: 100%;
+          height: 40px;
+
+          #pill {
+            margin-left: 10px;
+          }
+        }
+
+        .add-friend {
+          margin-left: 0;
+          margin-top: 5px;
+          justify-content: center;
+          width: 100%;
+          height: 40px;
+
+          #add-icon {
+            margin-right: 10px;
+          }
+        }
+
+        .del-group {
+          margin-left: 0;
+          margin-top: 5px;
+          justify-content: center;
+          width: 100%;
+          height: 40px;
+
+          #del-icon {
+            margin-right: 10px;
+          }
+        }
+      }
+    }
+  }
 }
