--- a/src/assets/styles/components/GroupRequests.scss
+++ b/src/assets/styles/components/GroupRequests.scss
@@ -5,19 +5,21 @@
   left: 0;
   width: 100%;
   height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  animation: fade 200ms ease-in;
 
   .group-requests-container {
     background-color: $light-trans;
     backdrop-filter: blur(22px);
     width: 60%;
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
+    min-width: 250px;
     height: 70vh;
     border-radius: 20px;
     border-bottom-right-radius: unset;
     box-shadow: 3px 4px 22px rgb(41, 41, 41);
+    animation: grow 200ms linear;
 
     .header {
       background-color: rgb(205, 231, 231);
@@ -164,6 +166,37 @@
               background-color: $danger-hover;
               box-shadow: 0 0 5px $danger-hover;
               text-shadow: 1px 0 1px black;
+            }
+          }
+        }
+      }
+
+      @media (max-width: 600px) {
+        #no-reqs {
+          text-align: center;
+        }
+
+        .request {
+          flex-direction: column;
+          box-shadow: 0 0 3px rgba(0, 0, 0, 0.137);
+          border-radius: 5px;
+          padding: 10px;
+          margin-top: 20px;
+
+          .req-col-one {
+            width: 250px;
+            justify-content: space-around;
+          }
+
+          .req-col-two {
+            margin-top: 20px;
+
+            #accept {
+              width: 100px;
+            }
+
+            #reject {
+              width: 100px;
             }
           }
         }
