--- a/src/assets/styles/components/SearchGroup.scss
+++ b/src/assets/styles/components/SearchGroup.scss
@@ -186,4 +186,56 @@
       }
     }
   }
+
+  @media (max-width: 500px) {
+    width: 90%;
+    margin-top: 50px;
+
+    .search-res {
+      .result-wrapper {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+
+        .result {
+          width: 100%;
+          min-width: 250px;
+          padding: 10px;
+          box-shadow: 0 0 3px #0000001c;
+          display: flex;
+          margin-top: 20px;
+          align-items: center;
+          justify-content: space-around;
+
+          .image {
+            width: 30%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+
+            img {
+              width: 40px;
+              border-radius: 50%;
+              box-shadow: 0 0 5px black;
+            }
+          }
+
+          .info {
+            flex: none;
+            width: 150px;
+
+            #sent-btn {
+              width: 100px;
+              margin-top: 15px;
+            }
+
+            #join-btn {
+              width: 100px;
+              margin-top: 15px;
+            }
+          }
+        }
+      }
+    }
+  }
 }
