--- a/src/assets/styles/components/UpdateProfile.scss
+++ b/src/assets/styles/components/UpdateProfile.scss
@@ -4,8 +4,9 @@
   left: 0;
   background-color: $light-trans;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   backdrop-filter: blur(18px);
+  animation: slideDown 0.1s ease-in;
 
   .close-icon {
     position: absolute;
@@ -21,11 +22,19 @@
     }
   }
 
+  .spinner {
+    position: absolute;
+    background-color: rgba(0, 0, 0, 0.759);
+    width: 100%;
+    height: 100%;
+  }
+
   .wrapper {
     height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
+    animation: fade 0.5s linear;
 
     .del-account {
       width: 90%;
@@ -141,6 +150,28 @@
           &:hover {
             color: black;
             background-color: transparent;
+          }
+        }
+      }
+    }
+
+    @media (max-width: 500px) {
+      .del-account {
+        flex-direction: column;
+        #middle {
+          font-size: 1.7rem;
+        }
+
+        .del-btn {
+          width: 250px;
+        }
+      }
+
+      .upd-account {
+        form {
+          #upd-btn {
+            margin-top: 50px;
+            width: 100%;
           }
         }
       }
