--- a/src/assets/styles/components/UploadImage.scss
+++ b/src/assets/styles/components/UploadImage.scss
@@ -4,22 +4,28 @@
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  animation: fade 200ms ease-in;
 
   .upload-image-container {
     background-color: $light;
     width: 70%;
-    min-width: 300px;
-    min-height: 50vh;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    min-width: 250px;
+    min-height: 70vh;
+    position: relative;
     border-radius: 15px;
     box-shadow: 0 0 15px black;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    animation: grow 200ms linear;
 
     .close-btn {
       position: absolute;
+      top: 0;
       right: 0;
 
       #close-icon {
@@ -44,7 +50,6 @@
         height: 200px;
         border-radius: 20px;
         position: relative;
-        bottom: 80px;
         box-shadow: 0 12px 10px -4px black;
 
         img {
@@ -57,10 +62,16 @@
     }
 
     .upload-image {
-      width: 90%;
+      width: 70%;
       margin: 0 auto;
+      text-align: center;
+
+      @media (max-width: 500px) {
+        width: 100%;
+      }
 
       input[type="file"] {
+        width: 250px;
         &::file-selector-button {
           background-color: $primary;
           border: none;
@@ -83,11 +94,11 @@
     .btns {
       width: 90%;
       margin: 0 auto;
-      margin-top: 20px;
+      margin-top: 100px;
       display: flex;
       flex-direction: column;
 
-      #upload {
+      #upload-btn {
         border: none;
         outline: none;
         background-color: $success;
@@ -101,21 +112,21 @@
         &:hover {
           background-color: $success-hover;
         }
+
+        &:disabled {
+          border: none;
+          outline: none;
+          background-color: $success-trans;
+          padding: 10px;
+          border-radius: 10px;
+          color: $light-trans;
+          font-family: inherit;
+          transition: all 0.2s ease-in-out;
+          cursor: default;
+        }
       }
 
-      #upload-disabled {
-        border: none;
-        outline: none;
-        background-color: $success-trans;
-        padding: 10px;
-        border-radius: 10px;
-        color: $light-trans;
-        font-family: inherit;
-        transition: all 0.2s ease-in-out;
-        cursor: default;
-      }
-
-      #remove {
+      #remove-btn {
         border: none;
         outline: none;
         background-color: $danger;
@@ -130,19 +141,49 @@
         &:hover {
           background-color: $danger-hover;
         }
+
+        &:disabled {
+          border: none;
+          outline: none;
+          background-color: $danger-trans;
+          margin-top: 10px;
+          padding: 10px;
+          border-radius: 10px;
+          color: $light-trans;
+          font-family: inherit;
+          transition: all 0.2s ease-in-out;
+          cursor: default;
+        }
+      }
+    }
+
+    @media (max-width: 500px) {
+      min-height: 100%;
+      width: 100%;
+      border-radius: unset;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-evenly;
+
+      .close-btn {
+        top: 0;
+        margin: 10px;
       }
 
-      #remove-disabled {
-        border: none;
-        outline: none;
-        background-color: $danger-trans;
-        margin-top: 10px;
-        padding: 10px;
-        border-radius: 10px;
-        color: $light-trans;
-        font-family: inherit;
-        transition: all 0.2s ease-in-out;
-        cursor: default;
+      .preview-image {
+        .image {
+          width: 250px;
+          height: 250px;
+          bottom: 0;
+        }
+      }
+
+      .btns {
+        width: 90%;
+        margin: 0 auto;
+        margin-top: 0;
+        display: flex;
+        flex-direction: column;
       }
     }
   }
