--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -8,7 +8,8 @@
   "./components/UpdateGroupName", "./components/DeleteModal",
   "./components/CreateGroupName", "./components/SearchGroup",
   "./components/GroupMembers", "./components/GroupPanel",
-  "./components/GroupProfile", "./components/Spinner", "./components/MobileNav";
+  "./components/GroupProfile", "./components/Spinner", "./components/MobileNav",
+  "./components/Redirect";
 
 * {
   padding: 0;
@@ -27,4 +28,31 @@ body {
 a {
   color: inherit;
   text-decoration: none;
+}
+
+@keyframes slideDown {
+  0% {
+    height: 0;
+  }
+  100% {
+    height: 100vh;
+  }
+}
+
+@keyframes fade {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@keyframes grow {
+  0% {
+    transform: scale(0);
+  }
+  100% {
+    transform: scale(1);
+  }
 }
