--- a/src/assets/styles/components/SearchFriend.scss
+++ b/src/assets/styles/components/SearchFriend.scss
@@ -136,10 +136,17 @@
           display: flex;
           align-items: center;
 
-          img {
+          .image {
             width: 70px;
-            border-radius: 50%;
-            box-shadow: 0 0 5px black;
+            height: 70px;
+
+            img {
+              width: 100%;
+              height: 100%;
+              object-fit: cover;
+              border-radius: 50%;
+              box-shadow: 0 0 5px black;
+            }
           }
 
           .username {
