--- a/src/assets/styles/components/SearchGroup.scss
+++ b/src/assets/styles/components/SearchGroup.scss
@@ -96,13 +96,16 @@
         align-items: center;
 
         .image {
-          width: 30%;
+          width: 40px;
+          height: 40px;
           display: flex;
           align-items: center;
           justify-content: center;
 
           img {
-            width: 40px;
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
             border-radius: 50%;
             box-shadow: 0 0 5px black;
           }
@@ -110,6 +113,7 @@
 
         .info {
           flex: 1;
+          margin-left: 15px;
 
           #name {
             letter-spacing: 2px;
